[New] 新增API可以選擇曲風的功能

--- a/Colab_API/MuseGan_predict.ipynb
+++ b/Colab_API/MuseGan_predict.ipynb
@@ -6,7 +6,7 @@
       "name": "MuseGan_predict.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTjWQMYbMxGgMld/c4FXDh",
+      "authorship_tag": "ABX9TyNXVtSJyhi7BJEv9pb+r5WC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "!pip install gast==0.2.0\n",
         "!pip install flask-ngrok"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         "dir='/content/drive/MyDrive/museGan'\n",
         "#os.getcwd() #查看當前路徑"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
         "from utils import make_sure_path_exists, load_yaml, update_not_none\n",
         "LOGGER = logging.getLogger(\"musegan.inference\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
         "    args = parser.parse_args(args=[])\n",
         "    return args"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
         "\n",
         "    return params, config"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +495,7 @@
         "                    print('feed_dict_sampler:\\n',feed_dict_sampler[placeholder_c].shape)\n",
         "            sess.run(sampler_op, feed_dict=feed_dict_sampler)\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +511,7 @@
         "  midi_file.write(base+'fake_x_0.mid')\n",
         "  return midi_file"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +529,7 @@
         "  folderName = 'exp/default_2/'\n",
         "  inference_main(folderName)\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -568,6 +568,10 @@
         "  \n",
         "@app.route(\"/ramdom\")\n",
         "def ramdom():\n",
+        "  #request data\n",
+        "  rJson = request.json\n",
+        "  genre = rJson['genre']#0,1,2\n",
+        "\n",
         "  predict_Normal()\n",
         "  midi = get_midi()\n",
         "  new_file = open(base+'fake_x_0.mid', 'rb')\n",
@@ -575,7 +579,7 @@
         "  \n",
         "app.run()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,7 +1122,7 @@
       "source": [
         "inference_main()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
