feat : 修改輸出數值的基數為從後50個epoch來算

--- a/Results/CollectRef.ipynb
+++ b/Results/CollectRef.ipynb
@@ -6,7 +6,7 @@
       "name": "CollectRef.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPl5wmeWixXHLMLt1DbAe5d",
+      "authorship_tag": "ABX9TyO81ziwYqn/YuUJdHWENGD9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
           "height": 54
         },
         "id": "x1KC-HOl2NNz",
-        "outputId": "95f6c5a2-c039-4a93-c69e-b896d6a92429"
+        "outputId": "32abbe9c-1b6f-4b49-bd99-20a12fd4319d"
       },
       "source": [
         "import os\n",
@@ -64,13 +64,13 @@
         "dir='/content/drive/MyDrive/museGan'\n",
         "os.getcwd() #查看當前路徑"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         },
         {
@@ -84,7 +84,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 1
         }
       ]
     },
@@ -97,7 +97,7 @@
         "import numpy as np\n",
         "import glob2 as gb"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70272883-40c0-459e-b628-8f35768407dd"
+        "outputId": "beaa827c-0cff-48f2-f8f0-29ac802bab8a"
       },
       "source": [
         "folderPath = './eval_popRock/drum_in_pattern_rate/'\n",
@@ -139,7 +139,7 @@
         "\n",
         "value_count = 0.0\n",
         "oldValue_count = 0.0\n",
-        "\n",
+        "t=0\n",
         "# 讀取每個epoch的值\n",
         "for i in range(times) :\n",
         "  # 取值\n",
@@ -148,27 +148,28 @@
         "  \n",
         "  epochValue.append(value)\n",
         "  old_epochValue.append(old_value)\n",
-        "\n",
-        "  # 計算總共的值\n",
-        "  value_count = value_count + value\n",
-        "  oldValue_count = oldValue_count + old_value\n",
-        "\n",
-        "new_mean = value_count/times\n",
-        "old_mean = oldValue_count/times\n",
+        "  if(i>(times-101)):\n",
+        "    t=t+1\n",
+        "    # 計算總共的值\n",
+        "    value_count = value_count + value\n",
+        "    oldValue_count = oldValue_count + old_value\n",
+        "new_mean = value_count/t\n",
+        "old_mean = oldValue_count/t\n",
         "print('舊Model平均值 : ',round(new_mean,2))\n",
         "print('新Model平均值 : ',round(old_mean,2))\n",
         "diff = ((new_mean/old_mean)-1)*100\n",
         "print('Model間差異為 : ',round(diff,2),'%')\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "舊Model平均值 :  0.95\n",
-            "新Model平均值 :  0.46\n",
-            "Model間差異為 :  107.07 %\n"
+            "100\n",
+            "舊Model平均值 :  0.98\n",
+            "新Model平均值 :  0.49\n",
+            "Model間差異為 :  99.0 %\n"
           ]
         }
       ]
@@ -240,7 +241,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a14a253-b5f3-4c94-cda4-47f15c67ecff"
+        "outputId": "e04ca428-305e-490c-a165-581e0839c5e3"
       },
       "source": [
         "folderPath = './eval_popRock/empty_bar_rate/'\n",
@@ -280,7 +281,7 @@
         "\n",
         "value_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
         "oldValue_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
-        "\n",
+        "t = 0\n",
         "# 讀取每個epoch的值\n",
         "for i in range(times) :\n",
         "  value = np.load(newFiles[i])\n",
@@ -298,27 +299,29 @@
         "  old_epochValue_4.append(old_value[3])\n",
         "  old_epochValue_5.append(old_value[4])\n",
         "\n",
-        "  # 計算總共的值\n",
-        "  value_count = np.add(value_count, value)\n",
-        "  oldValue_count = np.add(oldValue_count, old_value)\n",
+        "  if(i>(times-51)):\n",
+        "    t = t+1\n",
+        "    # 計算總共的值\n",
+        "    value_count = np.add(value_count, value)\n",
+        "    oldValue_count = np.add(oldValue_count, old_value)\n",
         "\n",
-        "new_mean = np.divide(value_count,times)\n",
-        "old_mean = np.divide(oldValue_count,times)\n",
+        "new_mean = np.divide(value_count,t)\n",
+        "old_mean = np.divide(oldValue_count,t)\n",
         "print('舊Model平均值 : ',new_mean)\n",
         "print('新Model平均值 : ',old_mean)\n",
         "diff = np.divide(new_mean,old_mean)\n",
         "persent_diff =np.subtract(np.multiply(diff,100),100)\n",
         "print('Model間差異為 : ',persent_diff)\n"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "舊Model平均值 :  [0.98370808 0.98093321 0.98084985 0.98932927 0.95977039]\n",
-            "新Model平均值 :  [0.94602706 0.90722656 0.87664348 0.95944884 0.87071265]\n",
-            "Model間差異為 :  [ 3.98308072  8.12439287 11.88697188  3.11433288 10.22814312]\n"
+            "舊Model平均值 :  [0.98304687 0.9784375  0.98398438 0.998125   0.95585937]\n",
+            "新Model平均值 :  [0.960625   0.92523438 0.87453125 0.98257812 0.90585938]\n",
+            "Model間差異為 :  [ 2.33409239  5.7502322  12.51563338  1.58225332  5.51962053]\n"
           ]
         }
       ]
@@ -359,7 +362,6 @@
         "plt.show()"
       ],
       "execution_count": null,
-
       "outputs": [
         {
           "output_type": "display_data",
@@ -391,7 +393,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4460cc1a-8f5b-4d42-f164-554183eee42d"
+        "outputId": "41f46eca-d0f4-4272-80f1-a6111648b63c"
       },
       "source": [
         "folderPath = './eval_popRock/in_scale_ratio/'\n",
@@ -431,7 +433,7 @@
         "\n",
         "value_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
         "oldValue_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
-        "\n",
+        "t = 0\n",
         "# 讀取每個epoch的值\n",
         "for i in range(times) :\n",
         "  value = np.load(newFiles[i])\n",
@@ -448,27 +450,29 @@
         "  old_epochValue_4.append(old_value[3])\n",
         "  old_epochValue_5.append(old_value[4])\n",
         "\n",
-        "  # 計算總共的值\n",
-        "  value_count = np.add(value_count, value)\n",
-        "  oldValue_count = np.add(oldValue_count, old_value)\n",
+        "  if(i>(times-51)):\n",
+        "    t = t+1\n",
+        "    # 計算總共的值\n",
+        "    value_count = np.add(value_count, value)\n",
+        "    oldValue_count = np.add(oldValue_count, old_value)\n",
         "\n",
-        "new_mean = np.divide(value_count,times)\n",
-        "old_mean = np.divide(oldValue_count,times)\n",
+        "new_mean = np.divide(value_count,t)\n",
+        "old_mean = np.divide(oldValue_count,t)\n",
         "print('舊Model平均值 : ',new_mean)\n",
         "print('新Model平均值 : ',old_mean)\n",
         "diff = np.divide(new_mean,old_mean)\n",
         "persent_diff =np.subtract(np.multiply(diff,100),100)\n",
         "print('Model間差異為 : ',persent_diff)\n"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "舊Model平均值 :  [0.62922586 0.72149582 0.72349234 0.46364262 0.73419284]\n",
-            "新Model平均值 :  [0.54904285 0.59922453 0.65100625 0.50917338 0.64439734]\n",
-            "Model間差異為 :  [14.60414303 20.40492111 11.13446902 -8.94209254 13.93480329]\n"
+            "舊Model平均值 :  [0.62553239 0.72248083 0.72232207 0.45596106 0.73671391]\n",
+            "新Model平均值 :  [0.54738374 0.60499041 0.67294519 0.49468432 0.6654098 ]\n",
+            "Model間差異為 :  [14.27675802 19.42021306  7.33742893 -7.82787227 10.71581777]\n"
           ]
         }
       ]
@@ -541,7 +545,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "015b6d05-bf0d-4151-b0ea-92a3615f8d99"
+        "outputId": "0cb26532-908c-4b09-d764-f0af387d6dd2"
       },
       "source": [
         "folderPath = './eval_popRock/n_pitches_used/'\n",
@@ -581,7 +585,7 @@
         "\n",
         "value_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
         "oldValue_count = np.array([0.0, 0.0, 0.0, 0.0, 0.0])\n",
-        "\n",
+        "t = 0\n",
         "# 讀取每個epoch的值\n",
         "for i in range(times) :\n",
         "  value = np.load(newFiles[i])\n",
@@ -598,27 +602,29 @@
         "  old_epochValue_4.append(old_value[3])\n",
         "  old_epochValue_5.append(old_value[4])\n",
         "\n",
-        "  # 計算總共的值\n",
-        "  value_count = np.add(value_count, value)\n",
-        "  oldValue_count = np.add(oldValue_count, old_value)\n",
+        "  if(i>(times-21)):\n",
+        "    t = t+1\n",
+        "    # 計算總共的值\n",
+        "    value_count = np.add(value_count, value)\n",
+        "    oldValue_count = np.add(oldValue_count, old_value)\n",
         "\n",
-        "new_mean = np.divide(value_count,times)\n",
-        "old_mean = np.divide(oldValue_count,times)\n",
-        "print('舊Model平均值 : ',new_mean)\n",
-        "print('新Model平均值 : ',old_mean)\n",
+        "new_mean = np.divide(value_count,t)\n",
+        "old_mean = np.divide(oldValue_count,t)\n",
+        "print('舊Model平均值 : ',old_mean)\n",
+        "print('新Model平均值 : ',new_mean)\n",
         "diff = np.divide(old_mean,new_mean)\n",
         "persent_diff =np.subtract(np.multiply(diff,100),100)\n",
         "print('Model間差異為 : ',persent_diff)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "舊Model平均值 :  [ 22.3445122  122.92073171 101.80487805  55.5152439  110.93597561]\n",
-            "新Model平均值 :  [277.3597561  505.42987805 329.82621951 333.49695122 360.00304878]\n",
-            "Model間差異為 :  [1141.28803384  311.18359046  223.97879732  500.73040804  224.51424959]\n"
+            "舊Model平均值 :  [ 54.85 362.7  115.85 148.15 179.8 ]\n",
+            "新Model平均值 :  [ 13.9  112.35  90.25  40.4  102.6 ]\n",
+            "Model間差異為 :  [294.60431655 222.83044059  28.36565097 266.70792079  75.24366472]\n"
           ]
         }
       ]
@@ -691,7 +697,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ee2d4ac-2f09-43e3-b4dd-104cb1dfab2e"
+        "outputId": "24ea89f2-9ef9-46dc-cf33-905d8855c339"
       },
       "source": [
         "folderPath = './eval_popRock/polyphonic_rate/'\n",
@@ -706,7 +712,7 @@
         "times = len(old_allFiles) if len(allFiles)>len(old_allFiles) else len(allFiles)\n",
         "newFiles = []\n",
         "old_newFiles= []\n",
-        "\n",
+        "t = 0\n",
         "# 整理排序array\n",
         "for i in range (times):\n",
         "\n",
@@ -748,27 +754,29 @@
         "  old_epochValue_4.append(old_value[3])\n",
         "  old_epochValue_5.append(old_value[4])\n",
         "\n",
-        "  # 計算總共的值\n",
-        "  value_count = np.add(value_count, value)\n",
-        "  oldValue_count = np.add(oldValue_count, old_value)\n",
+        "  if(i>(times-51)):\n",
+        "    t = t+1\n",
+        "    # 計算總共的值\n",
+        "    value_count = np.add(value_count, value)\n",
+        "    oldValue_count = np.add(oldValue_count, old_value)\n",
         "\n",
-        "new_mean = np.divide(value_count,times)\n",
-        "old_mean = np.divide(oldValue_count,times)\n",
+        "new_mean = np.divide(value_count,t)\n",
+        "old_mean = np.divide(oldValue_count,t)\n",
         "print('舊Model平均值 : ',new_mean)\n",
         "print('新Model平均值 : ',old_mean)\n",
         "diff = np.divide(old_mean,new_mean)\n",
         "persent_diff =np.subtract(np.multiply(diff,100),100)\n",
         "print('Model間差異為 : ',persent_diff)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "舊Model平均值 :  [0.04794113 0.47801717 0.34849089 0.02915843 0.43239562]\n",
-            "新Model平均值 :  [0.15276008 0.44384121 0.3196163  0.18538461 0.38209844]\n",
-            "Model間差異為 :  [218.64096261  -7.14952682  -8.28560851 535.78393833 -11.63221451]\n"
+            "舊Model平均值 :  [0.03263021 0.45919271 0.33291829 0.00152344 0.41549967]\n",
+            "新Model平均值 :  [0.0885498  0.41884115 0.26292155 0.12612793 0.35266276]\n",
+            "Model間差異為 :  [ 171.37370311   -8.78750071  -21.02520228 8179.16666667  -15.1232162 ]\n"
           ]
         }
       ]
